--- a/DataAccessLayer/Entities/Musiq.Context.tt
+++ b/DataAccessLayer/Entities/Musiq.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"OnSnap.edmx";
+const string inputFile = @"Musiq.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
