--- a/Musiq/Content/Site.css
+++ b/Musiq/Content/Site.css
@@ -1,6 +1,6 @@
 ﻿body {
     padding-top: 50px;
-    padding-bottom: 20px;
+    padding-bottom: 20px; 
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -91,5 +91,68 @@ and (max-width : 320px) {
     #table-song {
         width: 80%;
     }
+}
 
+/*Login Page**/
+.home-title{
+    font-family: 'Exo', sans-serif;
+    color:white;
+    font-size:8em;
+    text-decoration:none;
+}
+.col-centered{
+    float: none;
+    margin: 0 auto;
+}
+#login {
+    width:25%;
+   margin: 0 auto;
+}
+.fieldset-login{
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
+.site-font{
+	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+	font-weight: 300;
+}
+.form-control {
+    display: block;
+    width: 100%;
+    height: 55px;
+    padding: 6px 12px;
+    font-size: 1.35em;
+    line-height: 1;
+    color: #555555;
+    vertical-align: middle;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    margin-top: .5em;
+    margin-bottom: .5em;
+    margin-left:auto;
+    margin-right:auto;
+}
+.margintop{
+    margin-top:3em;
+}
+.login-btn{
+    width:100%;
+    min-width: 196px;
+    background-color: rgb(81, 199, 209);
+    color: white;
+    height: 50px;
+    border-style: none;
+    border-radius: .2em;
+    font-size: 1.35em;
+}
+.login-width{
+    min-width: 196px;
+}
+#login_page{
+    background-color: rgb(207, 207, 207);
 }
