--- a/Musiq/Views/Home/Index.cshtml
+++ b/Musiq/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Home Page";
 }
-
+<body id="login_page">
     <div class="row">
         <div class="col-lg-12 text-center">
             <header>
@@ -10,25 +10,25 @@
             </header>
         </div>
     </div>
-<div class="row text-center">
-    <div class="col-centered margintop">
-        <form class="form-horizontal">
-            <fieldset class="fieldset-login" id="login">
-                <input class="form-control site-font login-width" id="username" type="text" placeholder="Username" autofocus required>
-            </fieldset>
-            <fieldset class="fieldset-login" id="login">
-                <input class="form-control site-font login-width" id="password" type="password" placeholder="Password" required>
-            </fieldset>
-            <fieldset id="login">
-                <input class="login-btn site-font login-width" type="button" value="Log In">
-            </fieldset>
-            <fieldset id="login">
-                @*<a href="">Forgot your password?</a>*@@*<a href="">Not a member...Register</a>*@
-            </fieldset>
-        </form>
+    <div class="row text-center">
+        <div class="col-centered margintop">
+            <form class="form-horizontal">
+                <fieldset class="fieldset-login" id="login">
+                    <input class="form-control site-font login-width" id="username" type="text" placeholder="Username" autofocus required>
+                </fieldset>
+                <fieldset class="fieldset-login" id="login">
+                    <input class="form-control site-font login-width" id="password" type="password" placeholder="Password" required>
+                </fieldset>
+                <fieldset id="login">
+                    <input class="login-btn site-font login-width" type="button" value="Log In">
+                </fieldset>
+                <fieldset id="login">
+                    @*<a href="">Forgot your password?</a>*@@*<a href="">Not a member...Register</a>*@
+                </fieldset>
+            </form>
+        </div>
     </div>
-</div>
-
+</body>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
