Fixed overrided form-control, and new navbar logo to be smaller

--- a/Musiq/Views/Home/Index.cshtml
+++ b/Musiq/Views/Home/Index.cshtml
@@ -14,10 +14,10 @@
         <div class="col-centered margintop">
             <form class="form-horizontal">
                 <fieldset class="fieldset-login" id="login">
-                    <input class="form-control site-font login-width" id="username" type="text" placeholder="Username" autofocus required>
+                    <input class="form-control-login site-font login-width" id="username" type="text" placeholder="Username" autofocus required>
                 </fieldset>
                 <fieldset class="fieldset-login" id="login">
-                    <input class="form-control site-font login-width" id="password" type="password" placeholder="Password" required>
+                    <input class="form-control-login site-font login-width" id="password" type="password" placeholder="Password" required>
                 </fieldset>
                 <fieldset id="login">
                     <input class="login-btn site-font login-width" type="button" value="Log In">
