--- a/Musiq/Views/Shared/_Layout.cshtml
+++ b/Musiq/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header" style="float:right;">
-                    @Html.ActionLink("urMusiQ", "Index", "Home", null, new { @class = "home-title" })
+                    @Html.ActionLink("urMusiQ", "Index", "Home", null, new { @class = "logo-navbar" })
                 </div>
                 @*<div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
