--- a/Musiq/Content/Site.css
+++ b/Musiq/Content/Site.css
@@ -54,7 +54,12 @@ input[type="checkbox"].input-validation-error {
 #music-container {
     margin-top: 10px;
 }
-
+.logo-navbar{
+    font-family: 'Exo', sans-serif;
+    color: white;
+    font-size: 3em;
+    text-decoration: none;
+}
 /* Music Table */
 
 #table-length {
@@ -138,7 +143,7 @@ and (max-width : 320px) {
 	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
 	font-weight: 300;
 }
-.form-control {
+.form-control-login {
     display: block;
     width: 100%;
     height: 55px;
@@ -177,4 +182,8 @@ and (max-width : 320px) {
 }
 #login_page{
     background-color: rgb(207, 207, 207);
+}
+a:hover{
+    text-decoration:none;
+    color:white;
 }
