Styling input field on Profile/Index.cshtml

--- a/Musiq/Views/Profile/Index.cshtml
+++ b/Musiq/Views/Profile/Index.cshtml
@@ -2,7 +2,7 @@
 <div class="musiq-container">
     <div class="row">
         <div class="pull-right">
-            <input ng-model="search.SongTitle">
+            <input class="form-control" ng-model=search.SongTitle">
             <a class="btn btn-primary btn-margin mobile-hide" data-toggle="modal" href="#profileModal" id="uploadButton">
                 <span class="glyphicon glyphicon-music"></span>
                 Upload Music
