--- a/Musiq/Content/Site.css
+++ b/Musiq/Content/Site.css
@@ -1,6 +1,14 @@
-﻿body {
+﻿/* Font Faces */
+@font-face {
+  font-family: 'HelveticaLight';
+  src: url('Helvetica-Light.ttf');
+}
+
+body {
     padding-top: 50px;
     padding-bottom: 20px; 
+    font-family: "HelveticaLight";
+	font-weight: 300;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -60,6 +68,19 @@ input[type="checkbox"].input-validation-error {
     font-size: 3em;
     text-decoration: none;
 }
+
+.dropdown-submenu{position:relative;}
+.dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
+.dropdown-submenu:hover>.dropdown-menu{display:block;}
+.dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
+.dropdown-submenu:hover>a:after{border-left-color:#ffffff;}
+.dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
+
+#contextMenu {
+  position: absolute;
+  display:none;
+}
+
 /* Music Table */
 
 #table-length {
@@ -187,3 +208,15 @@ a:hover{
     text-decoration:none;
     color:white;
 }
+
+/* Special Effects */
+.loader {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url('../images/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+}
+
