--- a/Musiq/Views/Shared/_Layout.cshtml
+++ b/Musiq/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
     <link href='http://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
 
 </head>
