committing style button changes, fixed slider

--- a/Musiq/Views/Profile/Index.cshtml
+++ b/Musiq/Views/Profile/Index.cshtml
@@ -2,15 +2,15 @@
 <div class="musiq-container">
     <div class="row">
         <div class="col col-lg-8">
-            <input class="form-control pull-left" ng-model="search" style="width:100%">
+            <input class="form-control pull-left" placeholder="Sera" ng-model="search" style="width:100%">
         </div>
         <div class="col col-lg-4">
             <div class="pull-right">
-                <a class="btn btn-primary btn-margin mobile-hide" data-toggle="modal" href="#uploadMusicModal" id="uploadButton">
+                <a class="btn btn-musiq btn-margin mobile-hide" data-toggle="modal" href="#uploadMusicModal" id="uploadButton">
                     <span class="glyphicon glyphicon-music"></span>
                     Upload Music
                 </a>
-                <a class="btn btn-primary btn-margin portrait-hide" data-toggle="modal" href="#createPlaylistModal">
+                <a class="btn btn-musiq btn-margin portrait-hide" data-toggle="modal" href="#createPlaylistModal">
                     <span class="glyphicon glyphicon-plus"></span>
                     Create Playlist
                 </a>
