--- a/Musiq/Content/Site.css
+++ b/Musiq/Content/Site.css
@@ -9,6 +9,8 @@ padding-top: 80px;
 padding-bottom: 20px;
 font-family: "HelveticaLight";
 font-weight: 300;
+position: fixed;
+margin-left: 35px;
 }
 /**navigation**/
 .navbar-inverse {
@@ -263,6 +265,7 @@ and (max-width : 320px) {
 }
 #login_page{
     background-color: rgb(207, 207, 207);
+    position:static;
 }
 a:hover{
     text-decoration:none;
@@ -292,10 +295,54 @@ a:hover{
     color: white;
 }
 
+.btn-musiq {
+color: #ffffff;
+background-color: rgb(81, 199, 209);
+border-color: rgb(81, 199, 209);
+}
+.btn-musiq:hover {
+color: #ffffff;
+background-color: rgb(70, 167, 175);
+border-color: rgb(70, 167, 175);
+}
+
 /* Music Player */
 #songText {
     color: white;
     font-size: 16px;
     margin-top: 11px;
     margin-bottom: -15px;
+}
+
+/**Modals*/
+
+.modal-upload{
+	box-shadow: 0px 3px 5px #000;
+    visibility: hidden;
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	text-align: center;
+	z-index: 2000;
+	background-color: #2080D6;
+	min-width: 380px;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+-moz-transform: translateX(-50%) translateY(-50%);
+-ms-transform: translateX(-50%) translateY(-50%);
+transform: translateX(-50%) translateY(-50%);
+}
+.modal-upload{
+	box-shadow: 0px 3px 5px #888888;
+}
+.md-overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    opacity: 0;
+    background: rgba(6, 26, 32, 0.78);
+    transition: all 0.3s;
 }
