--- a/Musiq/Content/Site.css
+++ b/Musiq/Content/Site.css
@@ -282,6 +282,16 @@ a:hover{
 	z-index: 9999;
 	background: url('../images/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
 }
+.uploader {
+    display:none;
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background-color: white;
+}
 
 /* Layout */
 #audio {
@@ -315,25 +325,6 @@ border-color: rgb(70, 167, 175);
 }
 
 /**Modals*/
-
-.modal-upload{
-	box-shadow: 0px 3px 5px #000;
-    visibility: hidden;
-	position: fixed;
-	left: 50%;
-	top: 50%;
-	text-align: center;
-	z-index: 2000;
-	background-color: #2080D6;
-	min-width: 380px;
-	-webkit-transform: translateX(-50%) translateY(-50%);
--moz-transform: translateX(-50%) translateY(-50%);
--ms-transform: translateX(-50%) translateY(-50%);
-transform: translateX(-50%) translateY(-50%);
-}
-.modal-upload{
-	box-shadow: 0px 3px 5px #888888;
-}
 .md-overlay {
     position: fixed;
     width: 100%;
@@ -345,4 +336,13 @@ transform: translateX(-50%) translateY(-50%);
     opacity: 0;
     background: rgba(6, 26, 32, 0.78);
     transition: all 0.3s;
+}
+.upload-drop{
+    left: 50%;
+	top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+-moz-transform: translateX(-50%) translateY(-50%);
+-ms-transform: translateX(-50%) translateY(-50%);
+transform: translateX(-50%) translateY(-50%);
+color:white;
 }
