--- a/Musiq/Views/Profile/Index.cshtml
+++ b/Musiq/Views/Profile/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿<div class="loader"></div>
+<div class="uploader">
+    <p>Matador</p>
+</div>
 <div class="musiq-container">
     <div class="row">
         <div class="col col-lg-8">
@@ -6,7 +9,7 @@
         </div>
         <div class="col col-lg-4">
             <div class="pull-right">
-                <a class="btn btn-musiq btn-margin mobile-hide" data-toggle="modal" href="#uploadMusicModal" id="uploadButton">
+                <a class="btn btn-musiq btn-margin mobile-hide" @*data-toggle="modal" href="#uploadMusicModal"*@ id="uploadButton">
                     <span class="glyphicon glyphicon-music"></span>
                     Upload Music
                 </a>
@@ -21,13 +24,23 @@
         @Html.Partial("_MusicPartial")
     </div>
 </div>
-
+@*<div class="md-overlay">
+    <h1 class="upload-drop">Drop Music<span class="glyphicon glyphicon-music"></span></h1>
+</div>*@
 @Html.Partial("_ProfileModals")
 
 @section Scripts {
 <script type="text/javascript" src="~/Scripts/Upload/jquery.ui.widget.js"></script>
 <script type="text/javascript" src="~/Scripts/Upload/jquery.iframe-transport.js"></script>
 <script type="text/javascript" src="~/Scripts/Upload/jquery.fileupload.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("#uploadButton").click(function (event) {
+                event.preventDefault();
+                $('.uploader').fadeIn('slow');
+            });
+        });
+    </script>
 <script>
     //Upload
     $(function () {
@@ -124,7 +137,7 @@
         $(document).click(function () {
             $contextMenu.hide();
         });
-
+        
     });
 </script>
 
