commiting for julio my css

--- a/Musiq/Views/Profile/Index.cshtml
+++ b/Musiq/Views/Profile/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿<div class="loader"></div>
 <div class="uploader">
-    <p>Matador</p>
+    <div class="uploader-background text-center">
+        <p>Drop your Music<span class="glyphicon glyphicon-music"></span></p>
+    </div>
 </div>
 <div class="musiq-container">
     <div class="row">
