--- a/Musiq/Content/Site.css
+++ b/Musiq/Content/Site.css
@@ -291,6 +291,16 @@ a:hover{
 	height: 100%;
 	z-index: 9999;
 	background-color: white;
+    padding:10px;
+}
+.uploader-background{
+    border:dashed;
+    padding:10px;
+    border-color:grey;
+    border-width:4px;
+    border-radius:10px;
+    width:100%;
+    height:100%;
 }
 
 /* Layout */
