--- a/Musiq/Content/Site.css
+++ b/Musiq/Content/Site.css
@@ -293,14 +293,22 @@ a:hover{
 	background-color: white;
     padding:10px;
 }
-.uploader-background{
-    border:dashed;
-    padding:10px;
-    border-color:grey;
-    border-width:4px;
-    border-radius:10px;
-    width:100%;
-    height:100%;
+.uploader-background {
+border: dashed;
+padding: 10px;
+border-color: grey;
+border-width: 4px;
+border-radius: 10px;
+width: 100%;
+height: 90%;
+display: inline-block;
+vertical-align: middle;
+line-height: normal;
+margin-top:10px;
+}
+.uploader-text{
+    line-height: 262px;
+    font-size:3em;
 }
 
 /* Layout */
@@ -316,14 +324,24 @@ a:hover{
 }
 
 .btn-musiq {
-color: #ffffff;
-background-color: rgb(81, 199, 209);
-border-color: rgb(81, 199, 209);
+    color: #ffffff;
+    background-color: rgb(81, 199, 209);
+    border-color: rgb(81, 199, 209);
 }
 .btn-musiq:hover {
-color: #ffffff;
-background-color: rgb(70, 167, 175);
-border-color: rgb(70, 167, 175);
+    color: #ffffff;
+    background-color: rgb(70, 167, 175);
+    border-color: rgb(70, 167, 175);                
+}
+.btn-upload-close {
+    color: #ffffff;
+    background-color: rgb(209, 81, 81);
+    border-color: rgb(211, 103, 103);
+}
+.btn-upload-close:hover{
+    color: #ffffff;
+    background-color: rgb(209, 81, 81);
+    border-color: rgb(211, 103, 103);
 }
 
 /* Music Player */
