--- a/Musiq/Views/Shared/_Layout.cshtml
+++ b/Musiq/Views/Shared/_Layout.cshtml
@@ -24,9 +24,9 @@
                             <div>
                                 <div id="songText">
                                     <div style="text-align: center;">
-                                        <strong>Trophies</strong>
-                                        <span>by</span>
-                                        <strong>Drake</strong>
+                                        <strong id="current-song"></strong>
+                                        <span style="display:none;" id="by_span">by</span>
+                                        <strong id="current-artist"></strong>
                                     </div>
                                 </div>
                                 <audio controls="controls" id="audio" preload="auto" tabindex="0" class="center"></audio>
