--- a/Musiq/Content/Site.css
+++ b/Musiq/Content/Site.css
@@ -155,8 +155,27 @@ color: white;
 }
 
 #table {
-margin-right: -15px;
-margin-left: -30px;
+    margin-right: -15px;
+    margin-left: -30px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.table tbody tr:hover{
+     cursor: pointer;
+}
+
+.active-link {
+    background-color: #428bca;
+    color: white;
+}
+
+.table-hover > tbody > tr:hover > td, .table-hover > tbody > tr:hover > th {
+    background-color: rgba(141, 141, 141, 0.16);
 }
 
 /* Responsive Media Queries */
@@ -282,20 +301,26 @@ a:hover{
 
 /* Layout */
 #audio {
-    width: 80%;
-    float: right;
-    margin-top: 15px;
-    margin-bottom: 15px;
+width: 80%;
+float: right;
+margin-top: 15px;
+margin-bottom: 15px;
 }
 
 .white {
     color: white;
 }
 
+.row {
+margin-right: -15px;
+margin-left: -15px;
+margin-top: 15px;
+}
+
 /* Music Player */
 #songText {
     color: white;
-    font-size: 16px;
-    margin-top: 11px;
+    font-size: 14px;
+    margin-top: -10px;
     margin-bottom: -15px;
 }
