--- a/Musiq/Views/Home/Index.cshtml
+++ b/Musiq/Views/Home/Index.cshtml
@@ -15,19 +15,54 @@
             <form class="form-horizontal">
                 <fieldset class="fieldset-login" id="login">
                     <input class="form-control-login site-font login-width" id="username" type="text" placeholder="Username" autofocus required>
+                    
                 </fieldset>
                 <fieldset class="fieldset-login" id="login">
                     <input class="form-control-login site-font login-width" id="password" type="password" placeholder="Password" required>
                 </fieldset>
+                <fieldset id="login2" style="visibility:hidden; height:0px;">
+                    <input class="form-control-login site-font login-width" id="confirnPassword" type="password" placeholder="Confirm Password" required>
+                </fieldset>
                 <fieldset id="login">
                     <input class="login-btn site-font login-width" type="button" value="Log In">
                 </fieldset>
-                <fieldset id="login">
-                    @*<a href="">Forgot your password?</a>*@@*<a href="">Not a member...Register</a>*@
+                <fieldset class="register" id="registered" style="margin-top:8px;" ><span>Don't have an account?</span>
+                    <a id="register_link" class="pull-right" style="margin-left: 2px; margin-right: 6px;" href="#">Register</a>
                 </fieldset>
             </form>
         </div>
     </div>
+    <script>
+        var clicked = false;
+        $(document).ready(function () {
+            $('#register_link').click(function () {
+                if (!clicked) {
+                    clicked = true;
+                    $('#login2').css('visibility', 'visible');
+                    $('#login2').animate({
+                        height: "74px"
+                    },300);
+                    $('.login-btn').attr('value', 'Register');
+                    $("#registered span").text('Already have an Account?')
+                        $('#registered a').text('Log In');
+                    //$("#register_link").text('Already have an Account? Log In');
+                    
+                }
+                else {
+                    clicked = false;
+                    $('#login2').css('visibility', 'hidden');
+                    $('#login2').animate({
+                        height: "0px"
+                    }, 300);
+                    $('.login-btn').attr('value', 'Log In');
+                    $("#registered span").text("Don't have an Account?")
+                    $('#registered a').text('Register');
+                    
+                }
+            });
+
+        });
+    </script>
 </body>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
