--- a/Musiq/Views/Profile/Index.cshtml
+++ b/Musiq/Views/Profile/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="loader"></div>
-<div class="uploader">
+<div class="uploader" id="fileupload">
     <a class="btn btn-upload-close btn-margin portrait-hide pull-right" id="upload_close">
         <span class="glyphicon glyphicon-remove"></span>
     </a>
@@ -9,8 +9,8 @@
 </div>
 <div class="musiq-container">
     <div class="row">
-        <div class="col col-lg-8">
-            <input class="form-control pull-left" placeholder="Sera" ng-model="search" style="width:100%">
+        <div class="col-lg-8 pull-left" style="padding:0px;">
+            <input class="form-control" placeholder="Search" ng-model="search" style="width:100%">
         </div>
         <div class="col col-lg-4">
             <div class="pull-right">
@@ -18,7 +18,7 @@
                     <span class="glyphicon glyphicon-music"></span>
                     Upload Music
                 </a>
-                <a class="btn btn-musiq btn-margin portrait-hide" data-toggle="modal" href="#createPlaylistModal">
+                <a class="btn btn-musiq btn-margin portrait-hide mobile-hide" data-toggle="modal" href="#createPlaylistModal">
                     <span class="glyphicon glyphicon-plus"></span>
                     Create Playlist
                 </a>
@@ -61,7 +61,6 @@
             //},
             done: function (e, data) {
                 var fragment = document.createDocumentFragment();
-
                 $.each(data.result, function (index, file) {
                     var song = file.SongTitle;
                     var artist = file.Artist;
@@ -91,6 +90,7 @@
             }
 
         });
+        $('.uploader').fadeOut('slow');
     });
 
     //Right-Click Dropdown
