--- a/Musiq/Views/Shared/_Layout.cshtml
+++ b/Musiq/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                            @Html.ActionLink("urMusiQ", "Index", "Home", null, new { @class = "logo-navbar pull-right" })
+                            @Html.ActionLink("urMusiQ", "Index", "Profile", null, new { @class = "logo-navbar pull-right" })
                             <div>
                                 <div id="songText">
                                     <div style="text-align: center;">
@@ -41,7 +41,7 @@
                    <img class="img-circle" style="width:45px; height:45px; margin-left:15px" src="~/Content/images/Koala.jpg" />
                </div>
                <div class="col-sm-6" style="margin-top:100px;">
-                   <h4 style="margin-top: 15px;">Julio Garcia</h4>
+                   <h4 style="margin-top: 15px; font-family:HelveticaLight; font-weight:200;">Julio Garcia</h4>
                </div>
            </div>
           <ul class="text-center" style="margin-top:10px;">
