--- a/Musiq/Views/Shared/_MusicPartial.cshtml
+++ b/Musiq/Views/Shared/_MusicPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿<html ng-app="musiqApp"/>
 <head>
+    <title></title>
     <script src="~/Scripts/angular.min.js"></script>
     <script>
         var musiqApp = angular.module('musiqApp', []);
