Testing out Visual Studio Online

--- a/Musiq/Content/Site.css
+++ b/Musiq/Content/Site.css
@@ -261,7 +261,7 @@ input[type="button"],select{
     float: none;
     margin: 0 auto;
 }
-#login {
+.login {
     width:25%;
    margin: 0 auto;
 }
@@ -275,6 +275,12 @@ input[type="button"],select{
     min-width: 215px;
     margin:0 auto;
     width:25%;
+}
+
+#registered {
+margin-top: 8px;
+width: 25%;
+margin: 0 auto;
 }
 .fieldset-login{
     margin-bottom: 1em;
