--- a/Musiq/Views/Shared/_QueuePartial.cshtml
+++ b/Musiq/Views/Shared/_QueuePartial.cshtml
@@ -1,5 +1,4 @@
-﻿<div ng-controller="QueueController" id="music-container">
-    <table class="table table-hover" id="music-playlist">
+﻿    <table class="table table-hover" id="music-playlist">
         <thead>
             <tr>
                 <th id="table-share" class="mobile-hide"></th>
@@ -11,7 +10,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="song in queue" ng-show="([song] | filter:search).length > 0" data-songid="{{song.SongID}}" data-songlink="http://www.ucsbjukebox.info/Music/{{song.FilePath}}" data-song="{{song.SongTitle}}" data-artist="{{song.Artist}}" data-album="{{song.Album}}">
+            <tr ng-repeat="song in songQueue" ng-show="([song] | filter:search).length > 0" data-songid="{{song.SongID}}" data-songlink="http://www.ucsbjukebox.info/Music/{{song.FilePath}}" data-song="{{song.SongTitle}}" data-artist="{{song.Artist}}" data-album="{{song.Album}}">
                 <td class="mobile-hide">
                     <button class="btn btn-musiq btn-sm queue-button pull-left" type="button" ng-click="addToQueue(song)">
                         <span class="glyphicon glyphicon-plus"></span>
@@ -28,4 +27,3 @@
             </tr>
         </tbody>
     </table>
-</div>
